[gd_scene load_steps=13 format=2]

[ext_resource path="res://res/barcade-brawl-font/BarcadeBrawlRegular-plYD.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Instructions.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
extra_spacing_bottom = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[node name="Instructions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 20.0
margin_right = 1016.0
margin_bottom = 604.0
input_pass_on_modal_close_click = false
color = Color( 0.980392, 0.862745, 0.662745, 0.596078 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 336.0
margin_top = 48.0
margin_right = 1352.0
margin_bottom = 184.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave][rainbow]Instructions"
text = "Instructions"

[node name="Label" type="Label" parent="."]
margin_top = 128.0
margin_right = 1016.0
margin_bottom = 555.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Press the spacebar to jump

Hold the spacebar to toggle between 
the past and present

Press the left and right arrow keys to move. 

There are respawn points for when you die. 
Have fun jumping off ledges!
"
align = 1

[node name="StartGame" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -50.0
margin_right = 199.0
margin_bottom = -30.0
mouse_filter = 2
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.513726, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Start Game"

[node name="MainMenu" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -216.0
margin_top = -56.0
margin_right = -38.0
margin_bottom = -16.0
mouse_filter = 2
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.513726, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Main Menu"

[connection signal="pressed" from="StartGame" to="." method="_on_Start_Game_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_Main_Menu_pressed"]
